--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?&family=Rubik&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?&family=Rubik&family=Noto+Sans:wght@600&display=swap" rel="stylesheet">
+
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/aa241108d7.js" crossorigin="anonymous"></script>
 
     <title>React App</title>
   </head>
