--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?&family=Rubik&family=Noto+Sans:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?&family=Rubik:wght@300..900&family=Noto+Sans:wght@600&display=swap" rel="stylesheet">
 
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/aa241108d7.js" crossorigin="anonymous"></script>
